# fhir-pipeline

./: .gitignore  readme.md
bootstrap/: config.ini  pyproject.toml  readme.md
bootstrap/src/: config.ini  config.py  main.py
event-bridge/: pyproject.toml  readme.md
event-bridge/src/: config.ini  config.py  main.py
fhir-to-claims-processor/: claims.db  claims.sqlite  pyproject.toml  readme.md
fhir-to-claims-processor/src/: claim.py  config.ini  config.py  database.py  fhir-r4.json  main.py  storage.py
fhir-to-claims-processor/temp/: claim.json  patient.json
